# python-template

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.ci/: run
.github/workflows/: main.yml
project_template/: __init__.py  main.py
project_template/submodule1/: example_submodule.py
project_template/submodule1/subsubmodule/: example_subsubmodule.py
project_template/submodule2/: example_submodule.py
scripts/ci/: run
test/: example_test.py
