[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38"]
exclude = '\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["C0103", "C0114", "C0115", "C0116", "C0330", "C0326", "W0511"]
ignore = [".git/", "build/", "dist/", "__pycache__", ".venv", "venv"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
python_files = "*.py"
addopts = ["--verbose", "--doctest-modules"]
xfail_strict = true

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3,mypy

[testenv]
passenv = CI
commands =
    python -m pip install -e .[testing]
    python -m pytest .

[testenv:mypy]
skip_install = true
commands =
    python -m pip install -e .[linting]
    python -m mypy . --txt-report .mypy-coverage --html-report .mypy-coverage
"""
